Use BASE64 encoder from Apache Commons Codec instead of "sun.misc" package (which is not the "right way")